# hermes-meeting

./: .gitignore  README.md  SKILL.md  plugin.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
artifacts/: sports_kpi_analytical.json  sports_kpi_protocol.json  sports_kpi_summary.json
docs/: NAMING.md  TROUBLESHOOTING.md  plan-v0.7.1.md  tor-template.md
docs/adr/: 001-stt-model.md  002-diarization.md  003-two-pass-protocol.md  004-model-agnostic.md  005-speaker-fingerprint.md  006-auxiliary-models.md
docs/assets/: generate_pipeline_infographic.py
references/: INSTALL.md
scripts/: full_pipeline.py  generate_extraction_deliverables.py  generate_pipeline_infographic.py  meeting_cli.py  reprocess_russian_lectures.py
src/meeting_intelligence/: __init__.py  cli.py  gpu.py  language.py  sources.py  transcribe.py
src/meeting_intelligence/output/: __init__.py  docx.py  json.py
src/meeting_intelligence/plugin/: __init__.py  handlers.py
src/meeting_intelligence/protocol/: __init__.py  chunk.py  extract.py  verify.py
tests/: smoke_test.py  test_docx_output.py  test_install.py  test_meeting_cli.py  test_plugin.py
tests/integration/: test_cloud_policy.py  test_process_pipeline.py
tests/unit/: test_protocol_chunking.py  test_resource_limits.py  test_transcript.py  test_validator.py
