[build-system]
requires = ["hatchling>=1.0,<2"]
build-backend = "hatchling.build"

[project]
name = "meeting-intelligence"
version = "0.7.0"
description = "Local-first meeting intelligence"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.2,<2",
    "openai>=1,<3",
    "requests>=2.32,<3",
    "python-docx>=1.1,<2",
    "python-dotenv>=1.0,<2",
    "tenacity>=8.2,<10",
]

[project.optional-dependencies]
local = []
cloud = []
diarization = [
    "pyannote.audio>=3.1",
]
all = [
    "pyannote.audio>=3.1",
]
dev = [
    "pytest",
    "ruff",
    "build",
]

[project.scripts]
meeting = "meeting_intelligence.cli:main"

[project.entry-points."hermes_agent.plugins"]
meeting-intelligence = "meeting_intelligence.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_intelligence"]
