[build-system]
requires = ["hatchling>=1.0,<2"]
build-backend = "hatchling.build"

[project]
name = "meeting-intelligence"
version = "0.7.0"
description = "Local-first meeting intelligence"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.2,<2",
    "openai>=1,<3",
    "requests>=2.32,<3",
    "python-docx>=1.1,<2",
    "python-dotenv>=1.0,<2",
    "tenacity>=8.2,<10",
]

[project.optional-dependencies]
# The core dependencies support the local and cloud LLM backends. These extras
# make the installation intent explicit without adding duplicate packages.
local = []
cloud = []
gpu = [
    "nvidia-cublas-cu12; platform_system == 'Windows' or platform_system == 'Linux'",
]
diarization = [
    "pyannote.audio>=3.1",
]
url = [
    "yt-dlp",
]
all = [
    "pyannote.audio>=3.1",
    "yt-dlp",
    "nvidia-cublas-cu12; platform_system == 'Windows' or platform_system == 'Linux'",
]
dev = [
    "pytest",
    "ruff",
    "build",
]

[project.scripts]
meeting = "meeting_intelligence.cli:main"

[project.entry-points."hermes_agent.plugins"]
meeting-intelligence = "meeting_intelligence.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_intelligence"]
